<resources>
    <string name="app_name">HamonClassRoom</string>

    #inputTextHint
    <string name="inputTextHint_username">Username</string>
    <string name="inputTextHint_password">Password</string>

    #buttonText
    <string name="buttonText_signin">Sign In</string>
    <string name="buttonText_signup">Sign Up</string>
    <string name="buttonText_assign_subject">Assign Subject</string>
    <string name="buttonText_assign_change">Change</string>

    #text
    <string name="text_id">ID:</string>
    <string name="text_age">Age:</string>
    <string name="text_address">Address:</string>
    <string name="text_taught_by">Taught by:</string>
    <string name="text_credits">Credits:</string>
    <string name="text_room_type">Room Type:</string>
</resources>
