<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="Subject"
            type="tech.codewithabhi.hamonclassroom.data.network.models.Subject" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_sub_det_icon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView_sub_det_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:LoadSubjectIcons="@{Subject.name}"
                tools:srcCompat="@drawable/ic_history" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView_sub_det_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{Subject.name}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView_sub_det_icon"
            app:layout_constraintStart_toStartOf="@+id/cardView_sub_det_icon"
            app:layout_constraintTop_toBottomOf="@+id/cardView_sub_det_icon"
            tools:text="Laurie Thomas" />

        <TextView
            android:id="@+id/textView_sub_det_tb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_taught_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/material_on_surface_emphasis_high_type"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textView__sub_det_taught"
            app:layout_constraintStart_toStartOf="@+id/textView_sub_det_name"
            app:layout_constraintTop_toBottomOf="@+id/textView_sub_det_name" />

        <TextView
            android:id="@+id/textView__sub_det_taught"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{Subject.teacher}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/textView_sub_det_name"
            app:layout_constraintStart_toEndOf="@id/textView_sub_det_tb"
            app:layout_constraintTop_toBottomOf="@+id/textView_sub_det_name"
            tools:text="lauriethomas@example.com" />

        <LinearLayout
            android:id="@+id/box_sub_det_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_round_hard_green"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/box_sub_det_credits"
            app:layout_constraintEnd_toEndOf="@+id/textView__sub_det_taught"
            app:layout_constraintStart_toStartOf="@+id/textView_sub_det_tb"
            app:layout_constraintTop_toBottomOf="@+id/textView__sub_det_taught">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/text_id" />

            <TextView
                android:id="@+id/textView_sub_det_Id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@{`#`+Subject.id}"
                tools:text="21" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/box_sub_det_credits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_round_hard_gray"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/box_sub_det_id"
            app:layout_constraintStart_toStartOf="@+id/box_sub_det_id"
            app:layout_constraintTop_toBottomOf="@+id/box_sub_det_id">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_credits" />

            <TextView
                android:id="@+id/textView_sub_det_credits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{``+Subject.credits}"
                tools:text="21" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>